--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hymnal",
   "version": "1.0.0",
   "description": "Hymnal is a desktop application to allow one to search through christian hymns.",
-  "main": "main.js",
+  "main": "js/main.js",
   "scripts": {
     "start": "electron ."
   },
